--- a/page.html
+++ b/page.html
@@ -3,8 +3,10 @@
     <head>
         <title>    </title>
         <script type="text/javascript" src="javascript.js"></script>
+		<script src="jquery-1.10.1.min.js"></script>
+		<script src="jquery-migrate-1.2.1.min.js"></script>
     </head>
-<body onkeydown="maFonction()">
+<body onload="maFonction()">
  
 </body>
 </html>
