--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <title>    </title>
@@ -11,5 +10,5 @@
  
  <input type="button" value="Parse" onclick="maFonction()">
  </div>
-</body>
+</body>celiacelia
 </html>
